feat: Email validation with search pagination
