# src/models/category/category.controller.js
@@ -3,6 +3,8 @@ import createError from "../../common/utils/error.js";
 import createResponse from "../../common/utils/response.js";
 import handleAsync from "../../common/utils/handleAsync.js";
 import MESSAGES from "../../common/contstants/messages.js";
+import paginate from "../../common/utils/paginate.js";
+import search from "../../common/utils/search.js";
 
 export const createCategory = handleAsync(async (req, res, next) => {
   const existing = await Category.findOne({ title: req.body.title });
@@ -15,12 +17,35 @@ export const createCategory = handleAsync(async (req, res, next) => {
 });
 
 export const getListCategory = handleAsync(async (req, res, next) => {
-  const data = await Category.find();
+  const isTrash = req.query.trash === "true";
+  const { page, limit, skip } = paginate(req);
+  const searchFilter = search(req, ["title", "description"]); // tìm theo các field này
+
+  const baseFilter = isTrash
+    ? { deletedAt: { $ne: null } }
+    : { deletedAt: null };
+  const finalFilter = { ...baseFilter, ...searchFilter };
+
+  const total = await Category.countDocuments(finalFilter);
+  const data = await Category.find(finalFilter)
+    .sort({ createdAt: -1 })
+    .skip(skip)
+    .limit(limit);
+
   if (!data || data.length === 0) {
     return next(createError(404, MESSAGES.CATEGORY.NOT_FOUND));
   }
+
   return res.json(
-    createResponse(true, 200, MESSAGES.CATEGORY.GET_SUCCESS, data)
+    createResponse(true, 200, MESSAGES.CATEGORY.GET_SUCCESS, {
+      data,
+      pagination: {
+        total,
+        page,
+        limit,
+        totalPages: Math.ceil(total / limit),
+      },
+    })
   );
 });
 
